--- a/app/src/main/res/layout/fragment_another.xml
+++ b/app/src/main/res/layout/fragment_another.xml
@@ -3,6 +3,12 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent">
+
+    <Button
+        android:id="@+id/btnCallBack"
+        android:text="@string/call_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
     <ImageView
         android:src="@drawable/b"
         android:layout_width="wrap_content"
